# OpenMfxForBlender

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  bootstrap.bat
intern/openmesheffect/host/: CMakeLists.txt  mfxHost.c  mfxHost.cpp  mfxHost.h  mfxParamType.h  mfxPluginRegistry.h  mfxPluginRegistryPool.h  ofxExtras.h
intern/openmesheffect/host/intern/: PluginRegistryPool.cpp  attributes.c  attributes.cpp  attributes.h  inputs.c  inputs.cpp  inputs.h  mesh.cpp  mesh.h  meshEffectSuite.cpp  meshEffectSuite.h  mesheffect.c  mesheffect.cpp  mesheffect.h  messageSuite.h  messages.c  messages.h  mfxPluginRegistry.c  mfxPluginRegistry.cpp  mfxPluginRegistryPool.c  mfxPluginRegistryPool.cpp  parameterSuite.cpp  parameterSuite.h  parameters.c  parameters.cpp  parameters.h  properties.c  properties.cpp  properties.h  propertySuite.cpp
intern/openmesheffect/host/mfxHost/: mesheffect  messages  parameters
intern/openmesheffect/plugins/: CMakeLists.txt  mfx_color_to_uv.c  mfx_identity_plugin.c  mfx_mirror_plugin.c  mfx_sample_plugin.c  mfx_test_parameters_plugin.c  mfx_uv_transform.c
intern/openmesheffect/util/: CMakeLists.txt
intern/openmesheffect/util/include/util/: memory_util.h  ofx_util.h  plugin_support.h
intern/openmesheffect/util/intern/: binary_util.c  memory_util.c  ofx_util.c  plugin_support.c
intern/openmfx/: CMakeLists.txt  README.md
intern/openmfx/blender/: CMakeLists.txt  MFX_modifier.h  MFX_node_runtime.h  MFX_util.h  mfxModifier.h
intern/openmfx/blender/intern/: BlenderMfxHost.cpp  BlenderMfxHost.h  MFX_convert.h  OpenMfxRuntime.cpp  OpenMfxRuntime.h  convert.cpp  mfxCallbacks.cpp  mfxCallbacks.h  mfxConvert.cpp  mfxConvert.h  mfxModifier.cpp  mfxRuntime.cpp  mfxRuntime.h  modifier.cpp  modifier_runtime.cpp  modifier_runtime.h  node_runtime.cpp  util.cpp
intern/openmfx/host/: CMakeLists.txt  PluginRegistryManager.h  TinyTimer.h  mfxHost.cpp  mfxHost.h  mfxParamType.h  mfxPluginRegistry.h  mfxPluginRegistryManager.h  mfxPluginRegistryPool.h  ofxExtras.h
intern/openmfx/host/intern/: Allocator.h  Collection.h  MfxHost.cpp  MfxHost.h  PluginRegistryManager.cpp  PluginRegistryPool.cpp  PluginRegistryPool.h  attributes.cpp  attributes.h  inputs.cpp  inputs.h  mesh.cpp  mesh.h  meshEffectSuite.cpp  meshEffectSuite.h  mesheffect.cpp  mesheffect.h  messageSuite.cpp  messages.cpp  messages.h  mfxPluginRegistry.cpp  mfxPluginRegistryManager.cpp  mfxPluginRegistryPool.cpp  parameterSuite.cpp  parameters.cpp  parameters.h  properties.cpp  properties.h  propertySuite.cpp  propertySuite.h
intern/openmfx/host/intern/util/: binary_util.c  ofx_util.c  ofx_util.h
intern/openmfx/host/mfxHost/: MfxHost  attributes  mesh  properties
intern/openmfx/host/sdk/: MfxAttributeProps.cpp  MfxAttributeProps.h  README.md
intern/openmfx/host/util/: binary_util.h  mfx_util.h
intern/openmfx/include/: README.md  ofxMeshEffect.h
intern/openmfx/openfx/: CMakeLists.txt  ofxMeshEffect.h
intern/openmfx/plugins/: CMakeLists.txt  mfx_color_to_uv.c  mfx_identity_plugin.c  mfx_mirror_plugin.c  mfx_sample_plugin.c  mfx_test_parameters_plugin.c  mfx_uv_transform.c
intern/openmfx/sdk/: CMakeLists.txt  README.md
intern/openmfx/sdk/c/: CMakeLists.txt
intern/openmfx/sdk/c/common/: CMakeLists.txt
intern/openmfx/sdk/c/common/src/: common.h  macro.h  status.c  status.h
intern/openmfx/sdk/c/host/: CMakeLists.txt  README.md
intern/openmfx/sdk/c/host/src/: all.h  host.c  host.h  meshEffectSuite.c  meshEffectSuite.h  parameterSuite.c  parameterSuite.h  propertySuite.c  propertySuite.h  types.c  types.h
intern/openmfx/sdk/c/host/src/binary_utils/: binary_utils.c  binary_utils.h
intern/openmfx/sdk/c/plugin/: CMakeLists.txt
intern/openmfx/sdk/c/plugin/src/: attribute.c  attribute.h  mesh.c  mesh.h  plugin.h  runtime.c  runtime.h
intern/openmfx/sdk/cpp/: CMakeLists.txt
intern/openmfx/sdk/cpp/common/: CMakeLists.txt
intern/openmfx/sdk/cpp/common/src/: Logger.cpp  Logger.h  common.h  macros.h
intern/openmfx/sdk/cpp/host/: CMakeLists.txt  README.md
intern/openmfx/sdk/cpp/host/src/: Allocator.h  AttributeEnums.cpp  AttributeEnums.h  AttributeProps.cpp  AttributeProps.h  Attributes.cpp  Attributes.h  Collection.h  EffectLibrary.cpp  EffectLibrary.h  EffectRegistry.cpp  EffectRegistry.h  EffectRegistryEntry.cpp  EffectRegistryEntry.h  Host.cpp  Host.h  Inputs.cpp  Inputs.h  Mesh.cpp  Mesh.h  MeshEffect.cpp  MeshEffect.h  MeshProps.cpp  MeshProps.h  ParameterEnums.cpp  ParameterEnums.h  Parameters.cpp  Parameters.h  Properties.cpp  Properties.h  PropertyEnums.h  meshEffectSuite.cpp  meshEffectSuite.h  messageSuite.cpp  messageSuite.h  messages.cpp  messages.h  ofxExtras.h  parameterSuite.cpp  parameterSuite.h  (+2 more)
intern/openmfx/sdk/cpp/host/src/util/: binary_util.c  binary_util.h
intern/openmfx/sdk/cpp/plugin/: CMakeLists.txt  README.md
intern/openmfx/sdk/cpp/plugin/include/BMesh/: BMesh
intern/openmfx/sdk/cpp/plugin/include/PluginSupport/: MfxEffect  MfxRegister  README.md  utils
intern/openmfx/sdk/cpp/plugin/src/BMesh/: BMesh.cpp  BMesh.h
intern/openmfx/sdk/cpp/plugin/src/Plugin/: MfxAttribute.cpp  MfxAttribute.h  MfxAttributeProps.h  MfxBase.h  MfxEffect.cpp  MfxEffect.h  MfxHost.h  MfxInput.cpp  MfxInput.h  MfxInputDef.cpp  MfxInputDef.h  MfxMesh.cpp  MfxMesh.h  MfxMeshProps.h  MfxParam.cpp  MfxParam.h  MfxParamDef.h  (+7 more)
intern/openmfx/sdk/examples/: CMakeLists.txt
intern/openmfx/sdk/examples/c/: CMakeLists.txt
intern/openmfx/sdk/examples/c/plugins/: CMakeLists.txt  mfx_color_to_uv.c  mfx_identity_plugin.c  mfx_mirror_plugin.c  mfx_sample_plugin.c  mfx_test_parameters_plugin.c  mfx_uv_transform.c
intern/openmfx/sdk/examples/cpp/: CMakeLists.txt
intern/openmfx/sdk/examples/cpp/host/: CMakeLists.txt  main.cpp
intern/openmfx/sdk/examples/cpp/plugin/: BoxGeneratorEffect.hpp  CMakeLists.txt  TranslateEffect.hpp  plugin.cpp
intern/openmfx/test/: CMakeLists.txt  test_plugin_load.cpp
intern/openmfx/util/: CMakeLists.txt
intern/openmfx/util/include/util/: binary_util.h  path_util.h  plugin_support.h
intern/openmfx/util/intern/: binary_util.c  plugin_support.c
(+472 files in other folders)
